--- a/SFXHonker/app/src/main/res/menu/menu_main.xml
+++ b/SFXHonker/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.android.sfxhonker.MainActivity">
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        android:title="Settings"
+        android:visible="false"
+        app:showAsAction="ifRoom"/>
+
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_settings"
+        android:title="Settings"
+        app:showAsAction="ifRoom"/>
 </menu>
