--- a/SFXHonker/app/src/main/res/layout/folder_item.xml
+++ b/SFXHonker/app/src/main/res/layout/folder_item.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/directory_icon"
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:background="@drawable/ic_folder"/>
